[package]
name = "mecha-power-supply"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/mecha-power-supply.git"
homepage = "https://github.com/Dhruvesh08/mecha-power-supply.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
